# aevus-testbed

./: .coverage  .env.example  .eslintrc.json  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  README.md  bootstrap.sh  conftest.py  deploy.sh  dnp3_outstation.py  forecast_cache.json  package-lock.json  pyproject.toml  requirements.txt  weather_cache.json
.github/: dependabot.yml
.github/workflows/: README.md  ci-cd.ssh.yml.bak  ci-cd.ssm-pattern.yml.example  ci-cd.yml  ci.yml  lint.yml  lockgen.yml  secret-scan.yml
aevus_testbed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
award-recovery/: README.md  award-Aevus_Console.html  award-api-client.min.js  award-api-client.src.js
config/opcua/: example_killdeer.yaml  example_secure.yaml  killdeer_compressor.yaml  prosys_reference.yaml
dashboard/: Aevus_Console.html  Aevus_Console.html.bak  README.md  aevus-3dpad-map.js  aevus-hphmi.js  aevus-killdeer-3d.js  aevus-process-strip.js  aevus-spline-twin.js  aevus-windsock.js  api-client.js  api-client.js.bak  award-client.js  award-map.html  cognito-iot-init.js  latency-widget.js  loader-preview.html  loader-record.html  login.html  mqtt-client.js  rad-hover-live.js  rca-panel.js  rf-live-bridge.js  topology.html  twin-showcase.html
dashboard-staging/: Aevus_Console.html  api-client.js  api-client.src.js.patch  build.sh  loader-preview.html  login.html  manifest.json  sw.js  topology.html
data/: access_requests.json
deploy/: activate-wireguard.sh  aevus.service  deploy.sh  nginx-aevus.conf  setup-server.sh  wireguard-mikrotik.rsc
deploy/greengrass/: README.md  deploy-local.sh  package-artifacts.sh
deploy/nginx/: README.md  aevus.conf
deploy/pi/: README.md  aevus-trap-receiver.service  install.sh  push-to-pi.sh
docs/: ARCHITECTURE_REVIEW_2026-07.md  ARCHITECTURE_edge_to_cloud_convergence_v1.md  AWS_ACTIVATE_CREDITS_CHECK.md  AWS_LANDING_ZONE.md  Aevus_Competitive_Audit_v1.md  BRAND_LOGO_LOCKIN.md  BRAND_SYSTEM_v2.md  DASHBOARD_MQTT_WSS_DEPRECATION.md  DATA_COVERAGE_AUDIT_2026-05-30.md  GREENGRASS_DEPRECATION.md  HANDOFF_PEARL_BAND_UNIFICATION.md  IOT_GHOST_CLIENTID_FIX_2026-05-30.md  MERGE_PLAN_main_vs_event_driven_edge.md  MONITORING_COVERAGE_PLAN.md  OPCUA_DEPLOYMENT_RUNBOOK.md  OPERATOR_RUNBOOK.md  P3_BACKEND_API_CONTRACT.md  PHASE2_read_api_convergence_design.md  POST_INSTALL_SMOKE_TESTS.md  RADIO_COMMS_PAGE_DESIGN_v2.md  SCADAPACK_470_ENTERPRISE_CONFIG.md  SCADAPACK_WIRING_RUNBOOK.md  SEC_API_KEY_ROTATION.md  SITE_VISIT_RUNBOOK.md  SPLINE_TWIN_AUTHORING_CONTRACT.md  TASK_BACKLOG_AUDIT_2026-05-30.md  TESTBED_HANDOFF.md  TWIN_3D_MODEL_SOURCES.md  VLAN_MIGRATION_RUNBOOK.md
docs/applications/: AWS_ACTIVATE_APPLICATION_DRAFT.md  AWS_ACTIVATE_FOLLOWUP_2026-05-27.md  Aevus_AWS_Activate_ExecSummary_v1.md
docs/implementation/: killdeer_current_state_and_reconciliation.md  killdeer_drawing_refs_design.md  killdeer_process_assets_validation.md  pr104_post_merge_deployment_note.md
docs/patent/: P008_PATENT_PROVISIONAL_DRAFT.md
infra/terraform/: .gitignore  README.md  aws-audit.tf  aws-bedrock-rca.tf  aws-cognito.tf  aws-iot-core.tf  aws-iot-rules.tf  aws-l4e.tf  aws-sitewise.tf  outputs.tf  variables.tf  versions.tf
lambda/sitewise-simulator/: README.md  lambda_function.py
reference_data/: README.md
reference_data/demo/: cwru_run.csv  morris_slice.csv
scripts/: bootstrap_l4e_model.py  demo_reference_replay.py  demo_seed.py  discover_devices.py  export_l4e_training_data.py  inject_synthetic_alarm.py  install-hooks.sh  opcua_compressor_sim.py  prep_reference_data.py  scadapack_relay.ps1  seed_assets.py
scripts/edge/: README.md  scadapack-relay.service  scadapack_ingest_relay.py
scripts/git-hooks/: pre-commit
src/: config.py  il009.py  il9000.py  main.py  modbus_simulator.py  register_writer.py  scheduler.py  secrets_loader.py  util.py
src/api/: __init__.py  access_requests.py  ai.py  alerts.py  assets.py  auth.py  auth_config.py  commands.py  correlations.py  csv_io.py  deploy.py  diagnostics.py  health.py  ingest.py  integrations.py  metrics.py  notes.py  opcua_assets.py  pearls.py  ping_diag.py  predictions.py  process_assets.py  ratelimit.py  reference_assets.py  relay_overlay.py  reports.py  twin.py  weather.py  ws.py
src/collectors/: __init__.py  base.py  dnp3_master.py  dnp3_unsolicited.py  icmp_probe.py  modbus_rtu.py  opcua_client.py  opcua_security.py  pi_self_metrics.py  reference_replay.py  simulator.py  snmp_cli.py  snmp_edge.py  snmp_radio.py  snmp_router.py  snmp_switch.py  snmp_trap_receiver.py
src/engine/: __init__.py  alert_engine.py  comm_quality.py  commander.py  correlator.py  firmware_tracker.py  health_score.py  integrity_baseline.py  maintenance_tracker.py  normalizer.py  notifier.py  pearl_score.py  prediction.py  scoring.py  thresholds.py  weather.py
src/integrations/: latency_tracker.py  mqtt_publisher.py  topic_map.py
src/models/: __init__.py  alert.py  asset.py  command.py  correlation.py  prediction.py  telemetry.py  weather.py
src/services/: __init__.py  bedrock.py  twin_sim.py  twin_topology.py
src/storage/: dynamo_latest_state.py  influx.py  sqlite_db.py
tests/: test_alert_engine.py  test_api.py  test_appstate_wiring.py  test_auth.py  test_base_collector.py  test_brand_logo.py  test_collectors.py  test_dashboard_assets.py  test_deploy.py  test_dnp3_unsolicited.py  test_dynamo_latest_state.py  test_firmware_tracker.py  test_health_score.py  test_il009.py  test_il9000.py  test_imports.py  test_influx_safety.py  test_ingest_historian.py  test_ingest_secret.py  test_integrations.py  test_integrity_baseline.py  test_latency_tracker.py  test_maintenance_tracker.py  test_mqtt_half_open.py  test_mqtt_topic_map.py  test_normalizer.py  test_notifier_flood.py  test_opcua_assets.py  test_opcua_client.py  test_opcua_edge.py  test_opcua_integration.py  test_opcua_security.py  test_opcua_twin.py  test_openapi.py  test_pearl_score.py  test_pearls_api.py  test_poll_evidence.py  test_prediction.py  test_process_assets.py  test_ratelimit.py  (+11 more)
tools/: register_writer.py
(+25 files in other folders)
