[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aevus-testbed"
version = "0.1.0"
description = "AI-powered SCADA intelligence platform for midstream oil & gas"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Intrepid Logic LLC", email = "woody@intrepidlogic.io"},
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "influxdb-client>=1.40.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "pysnmp>=6.2.0",
    "pymodbus>=3.7.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "S101",   # assert usage OK in tests
    "S603",   # subprocess OK for SNMP
    "S607",   # partial executable path OK for snmpget
    "E501",   # line length handled by formatter
    "E402",   # import order OK for secrets_loader pattern
    "A002",   # type param shadowing OK in FastAPI query params
    "S104",   # binding all interfaces OK for server config
    "S105",   # hardcoded passwords are defaults, real values from .env
    "SIM105", # contextlib.suppress preference is style-only
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m not slow)",
    "integration: marks integration tests requiring live hardware",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B603", "B607"]
