[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aevus-testbed"
version = "0.1.0"
description = "AI-powered SCADA intelligence platform for midstream oil & gas"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "Intrepid Logic LLC", email = "woody@intrepidlogic.io"},
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    # Web stack is PINNED, not floored. Both CI and the EC2 deploy install with
    # `pip install -e ".[dev]"`, so these versions are the single source of truth
    # for what runs in production. Floors here (fastapi>=0.109) previously let the
    # resolver drift to fastapi 0.139 / starlette 1.3, whose route model made
    # test_imports find 0 /api/v1 routes — that red gate froze prod 2026-07-08.
    # starlette is listed explicitly (normally transitive via fastapi) so its
    # version can't float independently. Bump both together, deliberately.
    "fastapi==0.136.1",
    "starlette==1.3.1",
    "uvicorn[standard]>=0.27.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "influxdb-client>=1.40.0",
    "apscheduler>=3.10.4",
    "httpx>=0.26.0",
    "boto3>=1.34.0",
    "pysnmp>=6.2.0",
    "pymodbus>=3.7.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "websockets>=14.0",
    "aiomqtt>=2.3.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "asyncua>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "S101",   # assert usage OK in tests
    "S603",   # subprocess OK for SNMP
    "S607",   # partial executable path OK for snmpget
    "E501",   # line length handled by formatter
    "E402",   # import order OK for secrets_loader pattern
    "A002",   # type param shadowing OK in FastAPI query params
    "S104",   # binding all interfaces OK for server config
    "S105",   # hardcoded passwords are defaults, real values from .env
    "SIM105", # contextlib.suppress preference is style-only
]

[tool.ruff.lint.flake8-type-checking]
# THE #210 ROOT CAUSE: the TCH rules' autofix moved Pydantic field types (e.g.
# `datetime`) and FastAPI request/response types into `if TYPE_CHECKING:` blocks.
# With `from __future__ import annotations`, Pydantic/FastAPI then can't resolve
# them at schema-build time -> /openapi.json 500 + blank /docs. These settings tell
# ruff those annotations ARE evaluated at runtime, so it leaves the imports alone.
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = [
    "fastapi.APIRouter.get",
    "fastapi.APIRouter.post",
    "fastapi.APIRouter.put",
    "fastapi.APIRouter.delete",
    "fastapi.APIRouter.patch",
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in arg
# defaults — they are immutable, so B008 ("call in default arg") is a false
# positive for them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]
# Collectors poll OT hardware where transient errors (SNMP timeouts,
# malformed responses, dead Modbus slaves) are expected; the scheduler reads
# next cycle. Silent-swallow is design intent — logging every hiccup drowns
# the journal. simulator.py uses random for telemetry generation, not crypto.
"src/collectors/*" = ["S110", "S112", "S311"]
# Storage shutdown-race cleanup intentionally swallows late writes.
# SIM118 ("key in dict.keys()") doesn't apply: sqlite3.Row.__iter__ yields
# values, not keys, so `"col" in row` is wrong — must use row.keys().
"src/storage/sqlite_db.py" = ["S110", "SIM118"]
# Weather refresh is best-effort — a failed Open-Meteo poll must not crash
# the lifespan task.
"src/engine/weather.py" = ["S110"]
# Best-effort cleanup paths.
"src/api/access_requests.py" = ["S110"]
"src/register_writer.py" = ["S110"]
"src/collectors/dnp3_master.py" = ["S110"]
# Standalone OPC UA simulation server — uses random for compressor telemetry, not crypto.
"scripts/opcua_compressor_sim.py" = ["S311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with -m not slow)",
    "integration: marks integration tests requiring live hardware",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B603", "B607"]
